--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cmdk": "^0.2.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "fast-xml-parser": "^4.2.6",
     "next": "13.4.8",
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
